--- a/install
+++ b/install
@@ -36,6 +36,7 @@ OvpnDownload_Port='1998'
 MyVPS_Time='Asia/Manila'
 
 function  Instupdate() {
+ export DEBIAN_FRONTEND=noninteractive
  apt-get update
  apt-get upgrade -y
  apt install fail2ban -y
@@ -44,9 +45,11 @@ function  Instupdate() {
  apt-get install dropbear stunnel4 privoxy ca-certificates nginx ruby apt-transport-https lsb-release squid screenfetch -y
  apt-get install perl libnet-ssleay-perl openssl libauthen-pam-perl libpam-runtime libio-pty-perl apt-show-versions python dbus libxml-parser-perl -y
  apt-get install shared-mime-info jq -y
- gem install lolcat
+ gem install lolcat -y
  apt-get autoremove -y
- echo "deb http://build.openvpn.net/debian/openvpn/stable $(lsb_release -sc) main" >/etc/apt/sources.list.d/openvpn.list && apt-key del E158C569 && wget -O - https://swupdate.openvpn.net/repos/repo-public.gpg | apt-key add -
+ echo "deb http://build.openvpn.net/debian/openvpn/stable $(lsb_release -sc) main" >/etc/apt/sources.list.d/openvpn.list
+ apt-key del E158C569
+ wget -O - https://swupdate.openvpn.net/repos/repo-public.gpg | apt-key add -
  wget -qO security-openvpn-net.asc "https://keys.openpgp.org/vks/v1/by-fingerprint/F554A3687412CFFEBDEFE0A312F5F7B42F2B01E7" && gpg --import security-openvpn-net.asc
  apt-get update -y
  apt-get install openvpn -y
