--- a/install
+++ b/install
@@ -955,38 +955,38 @@ cat <<'mySiteOvpn' > /var/www/openvpn/index.html
                     </p>
                     <a class="btn btn-outline-success waves-effect btn-sm" href="http://IP-ADDRESS:NGINXPORT/OVPN.zip" style="float:right;"><i class="fa fa-download"></i> Download</a>
                 </li>
-                #<li class="list-group-item justify-content-between align-items-center" style="margin-bottom:1em;">
-                #    <p> GTM
-                #        <span class="badge light-blue darken-4">Android/iOS/PC/Modem</span>
-                #        <br>
-                #        <small>WNP/SNS/FUNALIW</small>
-                #    </p>
-                #    <a class="btn btn-outline-success waves-effect btn-sm" href="http://IP-ADDRESS:NGINXPORT/GTM.ovpn" style="float:right;"><i class="fa fa-download"></i> Download</a>
-                #</li>
-                #<li class="list-group-item justify-content-between align-items-center" style="margin-bottom:1em;">
-                #   <p>UDP
-                #        <span class="badge light-blue darken-4">Android/iOS/PC/Modem</span>
-                #        <br>
-                #        
-                #    </p>
-                #    <a class="btn btn-outline-success waves-effect btn-sm" href="http://IP-ADDRESS:NGINXPORT/UDP_1194.ovpn" style="float:right;"><i class="fa fa-download"></i> 1194</a>
-                #
-                #    <a class="btn btn-outline-success waves-effect btn-sm" href="http://IP-ADDRESS:NGINXPORT/UDP_25888.ovpn" style="float:right;"><i class="fa fa-download"></i> 25888</a>
-                #</li>
-                #<li class="list-group-item justify-content-between align-items-center" style="margin-bottom:1em;">
-                #    <p>Smart
-                #        <span class="badge light-blue darken-4">Android/iOS/PC/Modem</span>
-                #        <br>
-                #        <small>Giga Promos</small>
-                #    </p>
-                #    <a class="btn btn-outline-success waves-effect btn-sm" href="http://IP-ADDRESS:NGINXPORT/GGames.ovpn" style="float:right;"><i class="fa fa-download"></i> Games/Ml</a>
+                <li class="list-group-item justify-content-between align-items-center" style="margin-bottom:1em;">
+                    <p> GTM
+                        <span class="badge light-blue darken-4">Android/iOS/PC/Modem</span>
+                        <br>
+                        <small>WNP/SNS/FUNALIW</small>
+                    </p>
+                    <a class="btn btn-outline-success waves-effect btn-sm" href="http://IP-ADDRESS:NGINXPORT/GTM.ovpn" style="float:right;"><i class="fa fa-download"></i> Download</a>
+                </li>
+                <li class="list-group-item justify-content-between align-items-center" style="margin-bottom:1em;">
+                   <p>UDP
+                        <span class="badge light-blue darken-4">Android/iOS/PC/Modem</span>
+                        <br>
+                        
+                   </p>
+                    <a class="btn btn-outline-success waves-effect btn-sm" href="http://IP-ADDRESS:NGINXPORT/UDP_1194.ovpn" style="float:right;"><i class="fa fa-download"></i> 1194</a>
+                
+                    <a class="btn btn-outline-success waves-effect btn-sm" href="http://IP-ADDRESS:NGINXPORT/UDP_25888.ovpn" style="float:right;"><i class="fa fa-download"></i> 25888</a>
+                </li>
+                <li class="list-group-item justify-content-between align-items-center" style="margin-bottom:1em;">
+                    <p>Smart
+                        <span class="badge light-blue darken-4">Android/iOS/PC/Modem</span>
+                        <br>
+                        <small>Giga Promos</small>
+                    </p>
+                    <a class="btn btn-outline-success waves-effect btn-sm" href="http://IP-ADDRESS:NGINXPORT/GGames.ovpn" style="float:right;"><i class="fa fa-download"></i> Games/Ml</a>
 
-                #    <a class="btn btn-outline-success waves-effect btn-sm" href="http://IP-ADDRESS:NGINXPORT/WildRift.ovpn" style="float:right;"><i class="fa fa-download"></i> Games/WR</a>                        
+                    <a class="btn btn-outline-success waves-effect btn-sm" href="http://IP-ADDRESS:NGINXPORT/WildRift.ovpn" style="float:right;"><i class="fa fa-download"></i> Games/WR</a>                        
                  
-                #    <a class="btn btn-outline-success waves-effect btn-sm" href="http://IP-ADDRESS:NGINXPORT/GStories.ovpn" style="float:right;"><i class="fa fa-download"></i> Stories</a>                        
+                    <a class="btn btn-outline-success waves-effect btn-sm" href="http://IP-ADDRESS:NGINXPORT/GStories.ovpn" style="float:right;"><i class="fa fa-download"></i> Stories</a>                        
                  
-                #    <a class="btn btn-outline-success waves-effect btn-sm" href="http://IP-ADDRESS:NGINXPORT/GVideo.ovpn" style="float:right;"><i class="fa fa-download"></i> Video</a>
-                #</li>
+                    <a class="btn btn-outline-success waves-effect btn-sm" href="http://IP-ADDRESS:NGINXPORT/GVideo.ovpn" style="float:right;"><i class="fa fa-download"></i> Video</a>
+                </li>
                 
             </ul>
         </div>
