--- a/install
+++ b/install
@@ -672,10 +672,10 @@ http-proxy-option CUSTOM-HEADER Referrer api.twitter.com
 $(cat /etc/openvpn/ca.crt)
 </ca>
 <cert>
-$(cat /etc/openvpn/server.crt)
+$(cat /etc/openvpn/conf.crt)
 </cert>
 <key>
-$(cat /etc/openvpn/conf.key)
+$(cat /etc/openvpn/server.key)
 </key>
 <tls-crypt>
 $(cat /etc/openvpn/ta.key)
@@ -712,10 +712,10 @@ http-proxy-option CUSTOM-HEADER "Connection: Keep-Alive"
 $(cat /etc/openvpn/ca.crt)
 </ca>
 <cert>
-$(cat /etc/openvpn/server.crt)
+$(cat /etc/openvpn/conf.crt)
 </cert>
 <key>
-$(cat /etc/openvpn/conf.key)
+$(cat /etc/openvpn/server.key)
 </key>
 <tls-crypt>
 $(cat /etc/openvpn/ta.key)
@@ -752,10 +752,10 @@ http-proxy-option CUSTOM-HEADER "Connection: Keep-Alive"
 $(cat /etc/openvpn/ca.crt)
 </ca>
 <cert>
-$(cat /etc/openvpn/server.crt)
+$(cat /etc/openvpn/conf.crt)
 </cert>
 <key>
-$(cat /etc/openvpn/conf.key)
+$(cat /etc/openvpn/server.key)
 </key>
 <tls-crypt>
 $(cat /etc/openvpn/ta.key)
@@ -792,10 +792,10 @@ http-proxy-option CUSTOM-HEADER "Connection: Keep-Alive"
 $(cat /etc/openvpn/ca.crt)
 </ca>
 <cert>
-$(cat /etc/openvpn/server.crt)
+$(cat /etc/openvpn/conf.crt)
 </cert>
 <key>
-$(cat /etc/openvpn/conf.key)
+$(cat /etc/openvpn/server.key)
 </key>
 <tls-crypt>
 $(cat /etc/openvpn/ta.key)
@@ -832,10 +832,10 @@ http-proxy-option CUSTOM-HEADER "Connection: Keep-Alive"
 $(cat /etc/openvpn/ca.crt)
 </ca>
 <cert>
-$(cat /etc/openvpn/server.crt)
+$(cat /etc/openvpn/conf.crt)
 </cert>
 <key>
-$(cat /etc/openvpn/conf.key)
+$(cat /etc/openvpn/server.key)
 </key>
 <tls-crypt>
 $(cat /etc/openvpn/ta.key)
@@ -865,10 +865,10 @@ compress lz4
 $(cat /etc/openvpn/ca.crt)
 </ca>
 <cert>
-$(cat /etc/openvpn/server.crt)
+$(cat /etc/openvpn/conf.crt)
 </cert>
 <key>
-$(cat /etc/openvpn/conf.key)
+$(cat /etc/openvpn/server.key)
 </key>
 <tls-crypt>
 $(cat /etc/openvpn/ta.key)
@@ -898,10 +898,10 @@ compress lz4
 $(cat /etc/openvpn/ca.crt)
 </ca>
 <cert>
-$(cat /etc/openvpn/server.crt)
+$(cat /etc/openvpn/conf.crt)
 </cert>
 <key>
-$(cat /etc/openvpn/conf.key)
+$(cat /etc/openvpn/server.key)
 </key>
 <tls-crypt>
 $(cat /etc/openvpn/ta.key)
